implemented json-based test approach for SQL solutions (middle level)